# marketplace

./: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
mock_marketplace/: __init__.py  config.py  main.py  package-lock.json
mock_marketplace/alembic/: env.py
mock_marketplace/alembic/versions/: 01-03-25_e9d7442a2b03_add_table_quantity.py  04-03-2025_acee390c6b82_add_relationships.py  07-02-2025_72ccacae46a6_.py  08-02-25_13b72870825f_tables_user_product_image_size.py  08-03-2025_e31869109844_rebuild_table_size.py  09-02-2025_539d02e5a1fa_recreate_table_size.py  09-03-2025_0dd6621800ed_add_table_quantity_with_relationship_to_.py  27-03-2025_96011af9ba30_fixed_the_problem_for_deleting_wear.py  7a9b56bc8e44_base_revision.py  c09643eb74e2_base_revision.py
mock_marketplace/src/: admin_routers.py
mock_marketplace/src/admin/: __init__.py  admin_comands.py
mock_marketplace/src/auth/: __init__.py  auth.py  database.py  manager.py  schemas.py
mock_marketplace/src/frontend/frontend-mock-marketplace/: index.html  package-lock.json  package.json
mock_marketplace/src/frontend/frontend-mock-marketplace/src/: App.jsx  index.css
mock_marketplace/src/frontend/frontend-mock-marketplace/src/components/: AdminCommands.jsx  Card.jsx  Home.jsx  HomePage.jsx  Login.jsx  Success.jsx  (+5 more)
mock_marketplace/src/models/: __init__.py  frontend_model.py
mock_marketplace/src/posts/: __init__.py  database.py  models.py  orm.py
mock_marketplace/src/routers/: admin_routers.py  routers_for_purchase.py
mock_marketplace/src/tg_bot/: __init__.py  telegram_bot.py
(+3 files in other folders)
