[tool.poetry]
name = "mock_marketpace"
version = "0.1.0"
description = ""
authors = ["DVRST <kaitoshoma12@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
passlib = "^1.7.4"
aiogram = "^3.15.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"